events/static/events/css/event.scss
.event-page {
  .event-header {
    background-color: #000d19b8;
    background-image: url('./img/default-event-hero.jpg');
    background-size: cover;
    background-position: 50% 50%;
    text-align: center;

    & > .inner {
      padding: 5rem 1.5rem;
      background-color: #000d19b8;

      .title,
      .subtitle {
        margin: 0;
        color: #fff;
      }

      .subtitle {
        margin: 0.8rem 0.5rem;
        -webkit-font-smoothing: auto;
        font-weight: 300;

        .event-header-date,
        .event-header-location {
          display: inline-block;
          margin: 0.4em 0.7em;
        }

        i {
          color: $yellow-bg;
          margin-right: 0.3em;
        }
      }

      .button {
        margin-top: 1rem;
        background-color: $yellow-bg;
        font-size: 1.1em;
      }
    }
  }

  .event-menu {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    background-color: $blue-bg;

    .event-menu-item {
      padding: 0.9rem 1.5rem;
      color: #ffffffe8;

      &:hover,
      &:active,
      &:focus {
        background-color: #ffffff13;
      }
    }
  }

  .section {
    & .section-title {
      color: $blue-text;
      text-align: center;
      margin-bottom: 2.1rem;
    }
  }

  .section.speakers {
    .speaker-box {
      display: flex;
      flex-direction: column;
      align-items: center;
      height: 100%;
      text-align: center;
      padding: 0;
      padding-top: 1em;
      overflow: hidden;

      .speaker-photo {
        display: inline-block;
        background-size: cover;
        background-position: center;
        height: 6.5em;
        width: 6.5em;
        border-radius: 10em;
      }

      .speaker-name {
        display: flex;
        align-items: center;
        flex: 1;
        font-size: 1.1em;
        -webkit-font-smoothing: auto;
        color: #45526d;
        margin: 0.9em 0 0.5em 0;
        padding: 0 1em;
      }

      .speaker-show-more {
        color: $yellow-bg;
        -webkit-font-smoothing: auto;
        font-size: 0.9em;
        padding: 0.2em 1em;
      }

      .speaker-socials {
        display: flex;
        height: 2.7em;
        align-self: stretch;
        align-items: center;
        justify-content: center;
        background: #fbfbfc;
        margin-top: 0.7em;
        border-top: 1px solid #f0f0f2;

        a {
          display: inline-block;
          color: $blue-bg;

          &:hover,
          &:active,
          &:focus {
            color: lighten($blue-bg, 6);
          }

          i {
            padding: 0.5em;
          }
        }
      }
    }
  }

  .section.schedule {
    .schedule-table {
      display: flex;
      flex-direction: column;

      .columns.is-gapless {
        margin-bottom: 0.8rem; // override

        @include from($tablet) {
          margin-bottom: 0; // override
        }
      }

      $cell-margin: 1px;
      $slot-padding: 0.5rem;
      $min-height-slot: 7rem;

      .schedule-title {
        background-color: $blue-bg;
        color: #fff;
        padding: 1rem;
        margin: $cell-margin;
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
      }

      .schedule-slot {
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
        overflow: scroll;
        padding: $slot-padding;
        margin: $cell-margin;
        background-color: #f2f2f3;
      }

      .schedule-slot-plenary {
        padding: calc(#{$slot-padding} + 0.3rem);
      }

      .schedule-slot-organizing {
        background-color: #d9eff7;
      }

      .schedule-slot-coffee,
      .schedule-slot-meal {
        background-color: #fdebd1;
      }

      .slot-title {
        text-align: center;
      }

      .schedule-columns {
        .schedule-column {
          display: flex;
          flex: 1;
          flex-direction: column;
        }

        .schedule-slot {
          flex: 0 0 $min-height-slot;

          &.size-2 {
            flex-basis: calc(#{$min-height-slot} * 2 + #{$cell-margin} * 2);
          }

          &.size-3 {
            flex-basis: calc(#{$min-height-slot} * 3 + #{$cell-margin} * 4);
          }

          &.size-4 {
            flex-basis: calc(#{$min-height-slot} * 4 + #{$cell-margin} * 6);
          }
        }
      }
    }
  }

  .section.sponsors {
    .organization-box {
      display: flex;
      align-items: center;
      justify-content: center;
      height: 7rem;
      padding: 0.75rem 1.4rem;
      border: 1px solid #f2f2f4;

      &:hover,
      &:active,
      &:focus {
        background-color: #fdfdfd;
      }

      img {
        max-height: 100%;
      }
    }
  }
}

